# api-gateway

./: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: config.py  main.py
app/routers/auth/: router.py  schemas.py  services.py
app/routers/auth/proto_gen/: user_p2p.py  user_pb2.py  user_pb2.pyi  user_service_p2p.py  user_service_pb2.py  user_service_pb2.pyi  user_service_pb2_grpc.py
